# colour-palette

./: CHANGELOG.md  LICENSE.md  README.md  colour-palette.cabal  stack.yaml
.github/workflows/: ci.yaml
app/: Main.hs
