cabal-version:   1.18
name:            colour-palette
version:         0.0.1.0
license:         BSD3
license-file:    LICENSE.md
maintainer:      Oana Fabiana Andreescu <oana.fabiana.andreescu@gmail.com>
author:          Oana Fabiana Andreescu <oana.fabiana.andreescu@gmail.com>
tested-with:     ghc ==8.10.4
homepage:        https://github.com/onix-awk/colour-palette
bug-reports:     https://github.com/onix-awk/colour-palette/issues
synopsis:        A tool for extraction of colour palettes from images
description:     A tool for extraction of colour palettes from images.
category:        Graphics, Image
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/onix-awk/colour-palette.git

executable colour-palette
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <5.0,
        bytestring >=0.9.2 && <0.12,
        JuicyPixels >= 3.3.0
    ghc-options: -Wall
